--- a/public/views/errors/face-to-face-error.ejs
+++ b/public/views/errors/face-to-face-error.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header')-%>
+<%- include('./../partials/header')-%>
 
     <div>¡El id ingresado (<%=tournamentId%>) no se corresponde con el de ningún torneo!</div>
 
@@ -6,4 +6,4 @@
 
     <a href="./face-to-face">Volver</a>
 
-    <%- include('./partials/footer')-%>
+    <%- include('./../partials/footer')-%>
