--- a/public/views/face-to-face.ejs
+++ b/public/views/face-to-face.ejs
@@ -59,6 +59,9 @@
 
                     <% if(allTournaments.length> 0){ %>
                         <ul>
+                            <li class="">
+                                <a href="./face-to-face">Ver estadísticas globales</a>
+                            </li>
                             <%allTournaments.forEach(function(element, index) {%>
                                 <li class="">
                                     <a href="./face-to-face?id=<%=element.id%>">Ver estadísticas de "
