--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -15,6 +15,9 @@
                         <a class="nav__list-option-link" href="./login">Login</a>
                     </li>
                     <li id="" class="nav__list-option">
+                        <a class="nav__list-option-link" href="./tournaments">Torneos</a>
+                    </li>
+                    <li id="" class="nav__list-option">
                         <a class="nav__list-option-link" href="./create-tournament">Crear torneo</a>
                     </li>
                     <li id="" class="nav__list-option">
