--- a/public/scss/partials/_upload-games.scss
+++ b/public/scss/partials/_upload-games.scss
@@ -6,15 +6,50 @@
 
     .form__container {
         align-items: center;
-        background-color: aqua;
+        background-color: rgb(223, 148, 99);
         display: flex;
         flex-direction: column;
         justify-content: center;
         margin: 1rem auto 0 auto;
-        width: 100%;
+        padding: 1rem;
+        width: 75%;
 
-        option {
-            margin: 1rem 0;
+        &:first-child { 
+
+            .form__container-row {
+                align-items: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                width: 40%;
+                label {
+                    margin: 0.5rem 0 0.2rem 0;
+                    text-align: center;
+                    width: max-content;
+                    &:first-child {
+                        margin-top: 0;
+                    }
+                }
+            }
+        }
+
+        .form__container-row {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 0.25rem;
+            width: 100%;
+            label {
+                margin: 0.5rem .75rem 0.2rem 0;
+            
+                &:first-child {
+                    margin-top: 0;
+                }
+            }
+            select , input {
+                text-align: center;
+            }
         }
     }
 }
