--- a/public/views/errors/login-error.ejs
+++ b/public/views/errors/login-error.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/header')-%>
+<%- include('./../partials/header')-%>
 
     <body>
         <div class="container text-center my-3">
@@ -8,4 +8,4 @@
                 <button class="btn btn-warning my-5" onclick="location.href='/'">VOLVER</button>
             </div>
         </div>
-        <%- include('./partials/footer')-%>
+        <%- include('./../partials/footer')-%>
