--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -9,6 +9,14 @@
     list-style: none;
 }
 
+// .swal-overlay--show-modal.swal-modal {
+//     .swal-modal {
+//         .swal-text {
+//             text-align: center !important;
+//         }
+//     }
+// }
+
 .italic {
     font-style: italic;
 }
