--- a/public/views/api.ejs
+++ b/public/views/api.ejs
@@ -1,7 +1,5 @@
 <%- include('./partials/header')-%>
-
-    <body>
-
+    <main>
         <div class="container_api">
 
             <%apiResponse.forEach(function(element, index) {%>
@@ -41,5 +39,6 @@
 
         <%});%>
             </div>
+    </main>
 
-            <%- include('./partials/footer')-%>
+    <%- include('./partials/footer')-%>
