--- a/public/views/errors/face-to-face-error.ejs
+++ b/public/views/errors/face-to-face-error.ejs
@@ -1,9 +1,9 @@
 <%- include('./../partials/header')-%>
+    <main>
+        <div>¡El id ingresado (<%=tournamentId%>) no se corresponde con el de ningún torneo!</div>
 
-    <div>¡El id ingresado (<%=tournamentId%>) no se corresponde con el de ningún torneo!</div>
+        <div>También es posible que el torneo aun no tenga partidos cargados.</div>
 
-    <div>También es posible que el torneo aun no tenga partidos cargados.</div>
-
-    <a href="./face-to-face">Volver</a>
-
+        <a href="./face-to-face">Volver</a>
+    </main>
     <%- include('./../partials/footer')-%>
