--- a/public/views/errors/login-error.ejs
+++ b/public/views/errors/login-error.ejs
@@ -1,6 +1,5 @@
 <%- include('./../partials/header')-%>
-
-    <body>
+    <main>
         <div class="container text-center my-3">
             <div class="jumbotron" style="background-color: salmon;color: white;">
                 <h1>USER ERROR LOGIN</h1>
@@ -8,4 +7,5 @@
                 <button class="btn btn-warning my-5" onclick="location.href='/'">VOLVER</button>
             </div>
         </div>
-        <%- include('./../partials/footer')-%>
+    </main>
+    <%- include('./../partials/footer')-%>
