--- a/public/views/errors/tournaments-id-error.ejs
+++ b/public/views/errors/tournaments-id-error.ejs
@@ -1,9 +1,10 @@
 <%- include('./../partials/header')-%>
+    <main>
+        <div>No se encontró el torneo de ID: <%=idProvided%>
+        </div>
 
-    <div>No se encontró el torneo de ID: <%=idProvided%></div>
+        <div>Volver a <a href="/tournaments">torneos</a></div>
 
-    <div>Volver a <a href="./../tournaments.ejs">torneos</a></div>
-
-    <a href="./">Volver al home</a>
-
+        <a href="./">Volver al home</a>
+    </main>
     <%- include('./../partials/footer')-%>
