--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -1,6 +1,5 @@
 <%- include('./partials/header')-%>
-
-    <body>
+    <main>
         <div class="container my-5">
             <div class="jumbotron">
 
@@ -25,8 +24,9 @@
 
                 <hr>
                 <div class="text-left">
-                    <button class="btn btn-success my-3" onclick="location.href = '/register'">Ir a Register</button>
+                    <button class="btn btn-success my-3" onclick="location.href = '/'">Volver al home</button>
                 </div>
             </div>
         </div>
-        <%- include('./partials/footer')-%>
+    </main>
+    <%- include('./partials/footer')-%>
