--- a/public/views/tournament-selection.ejs
+++ b/public/views/tournament-selection.ejs
@@ -1,6 +1,5 @@
 <%- include('./partials/header')-%>
-
-    <body>
+    <main>
 
         <% if(tournamentsFromBD.length> 0){ %>
             <div>Hola, hay torneos</div>
@@ -30,6 +29,6 @@
                             <input type="submit">
                         </div>
                     </form>
-                    <script src="js/tournament-selection.js"></script>
+    </main>
 
-                    <%- include('./partials/footer')-%>
+    <%- include('./partials/footer')-%>
