--- a/public/scss/partials/_create-tournament.scss
+++ b/public/scss/partials/_create-tournament.scss
@@ -66,15 +66,17 @@
         &.select__container {
             display: flex;
             flex-direction: column;
+
             select {
                 background-color: aqua;
                 margin: 1rem 0;
                 text-align: center;
+
                 &:nth-child(2) {
                     width: 175px;
                 }
             }
-        } 
+        }
     }
 
     #teamsFromJSON {
@@ -106,6 +108,6 @@
     }
 
     #confirmationButton {
-        margin-top: 1rem;
+        margin: 1rem auto 0 auto;
     }
 }
