--- a/public/views/errors/upload-games-error.ejs
+++ b/public/views/errors/upload-games-error.ejs
@@ -1,9 +1,15 @@
 <%- include('./../partials/header')-%>
 
-    <div>No existen torneos en la base de datos</div>
+    <main>
 
-    <div>Antes de cargar un partido, debe <a href="./../create-tournament">generar un torneo!</a></div>
-    
-    <a href="./">Volver</a>
+        <% if(idProvided){ %>
+            <div>El ID solicitado no corresponde al de ningún torneo de la base de datos!</div>
+            <div>¡Intente de nuevo!</div>
+            <% } else{ %>
+                <div>Aún no se ha creado ningún torneo.</div>
+                <div>Antes de cargar un partido, debe <a href="./../create-tournament">generar un torneo!</a></div>
+                <% } %>
 
-<%- include('./../partials/footer')-%>
+                    <a href="./">Volver</a>
+    </main>
+    <%- include('./../partials/footer')-%>
