--- a/public/scss/partials/_create-tournament.scss
+++ b/public/scss/partials/_create-tournament.scss
@@ -1,4 +1,5 @@
 #confirm-countries {
+    align-items: center;
     display: flex;
     flex-direction: column;
     margin: 1rem auto;
@@ -34,6 +35,7 @@
         border-color: darkslategray;
         font-size: 0.875rem;
         margin: 0;
+        max-width: 200px;
     }
 }
 
@@ -68,7 +70,7 @@
             flex-direction: column;
 
             select {
-                background-color: aqua;
+                background-color: rgb(209, 230, 255);
                 margin: 1rem 0;
                 text-align: center;
 
