--- a/public/views/errors/upload-games-error.ejs
+++ b/public/views/errors/upload-games-error.ejs
@@ -6,7 +6,7 @@
             <div>El ID solicitado no corresponde al de ningún torneo de la base de datos!</div>
             <div>¡Intente de nuevo!</div>
             <% } else{ %>
-                <div>Aún no se ha creado ningún torneo.</div>
+                <div>No existen torneos en la base de datos.</div>
                 <div>Antes de cargar un partido, debe <a href="./../create-tournament">generar un torneo!</a></div>
                 <% } %>
 
